# sillyRag-backend

./: .env  Dockerfile  README.md  pyproject.toml  server.py
src/: main.py
src/api/: __init__.py  chat.py  chunk.py  file.py  space.py  user.py  voice.py
src/core/llm/: base_llm.py  deepseek_llm.py  openai_llm.py
src/core/prompts/: rag_prompt.py
src/dao/: base_dao.py  chunk_dao.py  embedding_dao.py  file_dao.py  space_dao.py  user_dao.py
src/dao/sql/: chunk_query.sql.j2  embedding_search.sql.j2  file_query.sql.j2  fulltext_search.sql.j2
src/db/: pg_db.py
src/dto/: chunk_dto.py  chunk_embedding_dto.py  embedding_dto.py  file_dto.py  space_dto.py  user_dto.py
src/handler/: jieba_tool.py
src/handler/chat/: chat_handler.py  history_handler.py
src/handler/embedding/: embedding_chunks_handler.py  embedding_model_handler.py
src/handler/partition/: csv_partition_handler.py  docx_partition_handler.py  md_partition_handler.py  partition_handler.py  pdf_partition_handler.py  txt_partition_handler.py
src/handler/search/: fulltext_search_chunk.py  reranker.py  vector_search_chunk.py
src/handler/voice/: voice_handler.py  voice_history_handler.py
src/handler/voice/asr/: sherpa_onnx_asr.py  utils.py
src/handler/voice/tts/: edge_tts.py
src/models/: __init__.py  chunk.py  embedding.py  files.py  space.py  user.py
src/services/: base_service.py  chunk_service.py  embedding_service.py  file_service.py  space_service.py  user_service.py
src/utils/: api_contract.py  conf.py  logger.py  serializers.py
